--- a/src/shared/styles/_colors.scss
+++ b/src/shared/styles/_colors.scss
@@ -1,16 +1,11 @@
-$light-blue: lightblue;
-$green: green;
-$dark-green: #1e5b2a;
-$dark-green-hover: #043e0f;
-$light-green: #6ca24a;
-$light-green-hover: #467927;
-$dark: darkblue;
-$red: red;
-$primary-text-color: #212121;
-$light-grey: #979797;
-$white: #ffffff;
-$dark-gray: #414343;
-$typography-black: #2c2727;
-$typography-grey-dark: #414343;
-$primary-orange: #eb6d0a;
+$dark: #101828;
+$dark-gray: #475467;
+$red: #e44848;
+$red-hover: #d84343;
+$yellow: #ffc531;
+$white: #f7f7f7;
+$dark-white: #f2f4f7;
+
+$typography-black: #101828;
+$typography-grey-dark: rgba(16, 24, 40, 0.6);
 $typography-grey: #535353;
