--- a/src/shared/styles/_colors.scss
+++ b/src/shared/styles/_colors.scss
@@ -6,6 +6,7 @@ $yellow: #ffc531;
 $white: #f7f7f7;
 $dark-white: #f2f4f7;
 
+$primary-text-color: #101828;
 $typography-black: #101828;
 $typography-grey-dark: rgba(16, 24, 40, 0.6);
 $typography-grey: #535353;
