--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -1,4 +1,4 @@
-$main-font-family: 'Open Sans', sans-serif;
+$main-font-family: 'Inter', sans-serif;
 $secondary-font-family: 'Yellowtail', cursive;
 
 $animation-duration: 300ms;
