--- a/src/shared/components/Button/Button.module.scss
+++ b/src/shared/components/Button/Button.module.scss
@@ -3,7 +3,7 @@
   background-color: $red;
   display: flex;
   padding: 16px 60px;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   width: 150px;
   font-size: 16px;
@@ -25,8 +25,6 @@
 
   @include media(tablet) {
     width: 173px;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   @include media(desktop) {
