--- a/src/shared/components/Button/Button.module.scss
+++ b/src/shared/components/Button/Button.module.scss
@@ -3,7 +3,7 @@
   background-color: $red;
   display: flex;
   padding: 16px 60px;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   width: 150px;
   font-size: 16px;
