--- a/src/shared/components/Button/Button.module.scss
+++ b/src/shared/components/Button/Button.module.scss
@@ -2,10 +2,10 @@
   border-radius: 100px;
   background-color: $red;
   display: flex;
-  padding: 16px 60px;
+  padding: 16px 40px;
   justify-content: center;
   align-items: center;
-  width: 150px;
+  width: 160px;
   font-size: 16px;
   color: $white;
   transition:
@@ -24,10 +24,10 @@
   }
 
   @include media(tablet) {
-    width: 173px;
+    // width: 173px;
   }
 
   @include media(desktop) {
-    width: 242px;
+    // width: 242px;
   }
 }
