--- a/src/shared/components/Categories/Categories.module.scss
+++ b/src/shared/components/Categories/Categories.module.scss
@@ -3,9 +3,10 @@
   background-color: $dark-white;
   display: flex;
   padding: 12px 18px;
+  margin: 0;
   justify-content: center;
   align-items: center;
-  width: 150px;
+  // width: 150px;
   font-size: 16px;
   border-radius: 100px;
   gap: 8px;
@@ -19,12 +20,12 @@
   outline: transparent;
 
   @include media(tablet) {
-    width: 173px;
-    margin-left: auto;
-    margin-right: auto;
+    // width: 173px;
+    // margin-left: auto;
+    // margin-right: auto;
   }
 
   @include media(desktop) {
-    width: 242px;
+    // width: 242px;
   }
 }
