--- a/src/shared/components/ButtonLoadMore/ButtonLoadMore.module.scss
+++ b/src/shared/components/ButtonLoadMore/ButtonLoadMore.module.scss
@@ -5,8 +5,9 @@
   padding: 16px 32px;
   justify-content: center;
   align-items: center;
-  width: 150px;
+  width: 160px;
   font-size: 16px;
+  margin: 0 auto;
   border: 1px solid $typography-grey;
   color: $typography-black;
   transition:
@@ -24,12 +25,12 @@
   }
 
   @include media(tablet) {
-    width: 173px;
-    margin-left: auto;
-    margin-right: auto;
+    // width: 173px;
+    // margin-left: auto;
+    // margin-right: auto;
   }
 
   @include media(desktop) {
-    width: 242px;
+    // width: 242px;
   }
 }
