--- a/src/shared/components/Categories/Categories.module.scss
+++ b/src/shared/components/Categories/Categories.module.scss
@@ -1,6 +1,6 @@
 .link {
   border-radius: 100px;
-  background-color: $dark-white;
+  background-color: rgba(242, 244, 247, 1);
   display: flex;
   padding: 12px 18px;
   margin: 0;
