--- a/src/modules/FormSearch/FormSearch.module.scss
+++ b/src/modules/FormSearch/FormSearch.module.scss
@@ -111,3 +111,31 @@
 //   pointer-events: none;
 //   display: none;
 // }
+
+// .header-nav .container {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
+
+// .link {
+//   text-decoration: none;
+// }
+
+// .logo {
+//   font-family: Raleway, sans-serif;
+//   font-size: 18px;
+//   font-weight: 800;
+//   line-height: 1.17;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+//   color: var(--color-button);
+//   padding: 24px 0;
+// }
+// .logo-studio {
+//   color: var(--background-color);
+// }
+
+// .current {
+//   color: var(--color-button-nav);
+// }
