--- a/src/shared/components/Categories/Categories.module.scss
+++ b/src/shared/components/Categories/Categories.module.scss
@@ -6,7 +6,7 @@
   margin: 0;
   justify-content: center;
   align-items: center;
-  // width: 150px;
+  position: relative;
   font-size: 16px;
   border-radius: 100px;
   gap: 8px;
