--- a/src/modules/Modal/Modal.module.scss
+++ b/src/modules/Modal/Modal.module.scss
@@ -14,6 +14,7 @@
 }
 
 .modal.active {
+  z-index: 1;
   opacity: 1;
   pointer-events: all;
 }
@@ -27,6 +28,7 @@
   background-color: rgba(255, 255, 255, 1);
   transform: scale(0.5);
   transition: 0.4s all;
+  z-index: 2;
 }
 
 .modalContent.active {
