--- a/src/modules/FormSearch/FormSearch.module.scss
+++ b/src/modules/FormSearch/FormSearch.module.scss
@@ -57,6 +57,10 @@
   text-align: left;
   margin-bottom: 24px;
 }
+// .line {
+//   margin-bottom: 24px;
+//   border: 1px solid black;
+// }
 
 // .checkbox-card {
 //   position: relative;
