--- a/src/modules/FilterEquipmentList/FilterEquipmentList.module.scss
+++ b/src/modules/FilterEquipmentList/FilterEquipmentList.module.scss
@@ -5,4 +5,6 @@
   column-gap: 10px;
   row-gap: 8px;
   margin-bottom: 32px;
+  padding-top: 24px;
+  border-top: 1px solid rgba(16, 24, 40, 0.4);
 }
